--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ geoip2
 django-haystack >= 3.0b1
 Django-MySQL ~= 3.0
 mysqlclient ~= 2.0
+wheel_filename ~= 1.2
 social_auth_app_django ~= 4.0
 # ChimeraX-specific packages
 pkginfo
